...
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="cwx-RY-uVu">
                                <rect key="frame" x="10" y="74" width="355" height="30"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter task description" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="T0A-o6-m5T">
                                        <rect key="frame" x="0.0" y="0.0" width="355" height="30"/>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" returnKeyType="done"/>
                                    </textField>
                                </subviews>
...
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="cwx-RY-uVu" secondAttribute="trailing" constant="10" id="46w-Q5-FQ5"/>
                            <constraint firstItem="cwx-RY-uVu" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="10" id="5iy-DL-LC3"/>
                            <constraint firstItem="cwx-RY-uVu" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="M0b-os-6pX"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" title="New Task" id="v8x-nh-44a">
                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="jeu-0h-SnH">
                            <connections>
                                <action selector="cancel:" destination="BYZ-38-t0r" id="ciM-QY-27S"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" style="done" systemItem="save" id="G9L-m7-EDr">
...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="Q11-vG-ROq" id="d49-S8-xw5"/>
                            <outlet property="delegate" destination="Q11-vG-ROq" id="k27-Zy-m2p"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Tasks" id="fx1-bZ-1x4">
                        <barButtonItem key="leftBarButtonItem" systemItem="add" id="7WJ-d5-iYw">
                            <connections>
                                <segue destination="n3q-rc-SuR" kind="presentation" identifier="AddTask" id="bXl-Nr-GCO"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" systemItem="action" id="91C-ng-YSv">
...
